@@ -1,9 +1,11 @@
 package com.sharesapp.backend.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyFloat;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -12,14 +14,17 @@ import com.sharesapp.backend.dto.share.ShareDto;
 import com.sharesapp.backend.dto.user.CreateUser;
 import com.sharesapp.backend.dto.user.UserDto;
 import com.sharesapp.backend.dto.user.UserShareDto;
+import com.sharesapp.backend.model.Company;
 import com.sharesapp.backend.model.Share;
 import com.sharesapp.backend.model.User;
+import com.sharesapp.backend.repository.CompanyRepository;
 import com.sharesapp.backend.repository.ShareRepository;
 import com.sharesapp.backend.repository.UserRepository;
 import com.sharesapp.backend.service.impl.UserServiceImpl;
 import com.sharesapp.backend.utils.cache.GenericCache;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -29,18 +34,24 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.MatchingStrategies;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class UserServiceTests {
 
-  private final Share share = new Share();
-  private final User user = new User();
+  private User user;
+  private Share share;
+  private CreateUser createUser = new CreateUser();
   @Mock
   private UserRepository userRepository;
   @Mock
   private ShareRepository shareRepository;
+  @Mock
+  private CompanyRepository companyRepository;
   @Mock
   private GenericCache<Long, User> cache;
   @InjectMocks
@@ -50,169 +61,195 @@ class UserServiceTests {
 
   @BeforeEach
   public void setUp() {
+    share = new Share(1L, 1.0f, 1.0f, 1.0f, 1.0f, 1.0f,
+        Instant.parse("2007-12-03T10:15:30.00Z"), "Symbol", new HashSet<>(), null);
     modelMapper.getConfiguration().setMatchingStrategy(MatchingStrategies.STRICT);
-
-    user.setId(1L);
-    user.setFirstName("Test First Name");
-    user.setLastName("Test Last Name");
-
-    share.setId(1L);
-    share.setPrevClosePrice(1.0f);
-    share.setHighPrice(1.0f);
-    share.setLowPrice(1.0f);
-    share.setOpenPrice(1.0f);
-    share.setLastSalePrice(1.0f);
-    share.setLastTimeUpdated(Instant.parse("2021-01-01T00:00:00Z"));
-    share.setSymbol("Test Symbol");
+    user = new User(1L, "First Name", "Last Name", "Email",
+        "Phone Number", "Password", new HashSet<>());
+    createUser = modelMapper.map(user, CreateUser.class);
   }
 
   @Test
   void testCreateUser() {
-    CreateUser createUser = modelMapper.map(user, CreateUser.class);
-
+    when(cache.get(1L)).thenReturn(Optional.ofNullable(user));
     when(userRepository.save(any(User.class))).thenReturn(user);
 
     Optional<UserDto> result = userService.createUser(createUser);
 
     assertTrue(result.isPresent());
-    assertEquals(user.getId(), result.get().getId());
-    assertEquals(user.getFirstName(), result.get().getFirstName());
-    assertEquals(user.getLastName(), result.get().getLastName());
+    assertEquals(modelMapper.map(user, UserDto.class), result.get());
+    verify(userRepository, times(1)).save(any(User.class));
     verify(cache, times(1)).put(1L, user);
+
+    Optional<User> cacheUser = cache.get(user.getId());
+    assertTrue(cacheUser.isPresent());
+    assertEquals(user, cacheUser.get());
+    verify(cache, times(1)).clear();
   }
 
   @Test
   void testCreateManyUsers() {
-    CreateUser createUser = modelMapper.map(user, CreateUser.class);
-
+    when(cache.get(1L)).thenReturn(Optional.ofNullable(user));
     when(userRepository.save(any(User.class))).thenReturn(user);
 
-    List<CreateUser> createUsers = Arrays.asList(createUser, createUser, createUser);
-
-    Optional<List<UserDto>> result = userService.createManyUsers(createUsers);
+    List<User> users = List.of(user, user, user);
+    Optional<List<UserDto>>
+        result = userService.createManyUsers(
+        users.stream().map(u -> modelMapper.map(u, CreateUser.class)).toList());
 
     assertTrue(result.isPresent());
-    assertFalse(result.get().isEmpty());
-    assertEquals(modelMapper.map(user, UserDto.class), result.get().get(1));
+    assertEquals(users.stream().map(u -> modelMapper.map(u, UserDto.class)).toList(), result.get());
     verify(userRepository, times(3)).save(any(User.class));
+    verify(cache, times(3)).put(1L, user);
+
+    Optional<User> cacheUser = cache.get(user.getId());
+    assertTrue(cacheUser.isPresent());
+    assertEquals(user, cacheUser.get());
+    verify(cache, times(1)).clear();
   }
 
   @Test
-  void testGetById() {
-    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+  void testGetUserById() {
+    when(cache.get(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
 
     Optional<UserDto> result = userService.getById(1L);
 
     assertTrue(result.isPresent());
-    assertEquals(user.getId(), result.get().getId());
-    assertEquals(user.getFirstName(), result.get().getFirstName());
-    assertEquals(user.getLastName(), result.get().getLastName());
+    assertEquals(modelMapper.map(user, UserDto.class), result.get());
+    verify(cache, times(1)).get(1L);
     verify(cache, times(1)).put(1L, user);
   }
 
   @Test
   void testGetAllUsers() {
-    when(userRepository.findAll()).thenReturn(Arrays.asList(user, user, user));
+    when(userRepository.findAll()).thenReturn(List.of(user));
 
     Optional<List<UserDto>> result = userService.getAllUsers();
 
     assertTrue(result.isPresent());
-    assertEquals(3, result.get().size());
-    assertEquals(user.getId(), result.get().get(1).getId());
-    assertEquals(user.getFirstName(), result.get().get(1).getFirstName());
-    assertEquals(user.getLastName(), result.get().get(1).getLastName());
+    assertEquals(List.of(modelMapper.map(user, UserDto.class)), result.get());
+    verify(userRepository, times(1)).findAll();
   }
 
-//  @Test
-//  void testUpdateUser() {
-//    UserDto userDto = modelMapper.map(user, UserDto.class);
-//
-//    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-//
-//    Optional<UserDto> result = userService.updateUser(1L, modelMapper.map(userDto, UserDto.class));
-//
-//    assertTrue(result.isPresent());
-//    assertEquals(user.getId(), result.get().getId());
-//    assertEquals(user.getFirstName(), result.get().getFirstName());
-//    assertEquals(user.getLastName(), result.get().getLastName());
-//    verify(cache, times(1)).remove(1L);
-//    verify(cache, times(1)).remove(1L);
-//  }
+  @Test
+  void testUpdateUser() {
+    when(userRepository.save(any(User.class))).thenReturn(user);
+    when(cache.get(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
+
+    Optional<UserDto> result = userService.updateUser(1L, modelMapper.map(user, UserDto.class));
+
+    assertTrue(result.isPresent());
+    assertEquals(modelMapper.map(user, UserDto.class), result.get());
+    verify(userRepository, times(1)).deleteById(1L);
+    verify(userRepository, times(1)).save(any(User.class));
+    verify(cache, times(1)).remove(1L);
+    verify(cache, times(1)).put(1L, user);
+  }
 
   @Test
   void testDeleteUser() {
-    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+    when(cache.get(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.save(any(User.class))).thenReturn(user);
+    doNothing().when(userRepository).deleteById(anyLong());
+    doNothing().when(cache).remove(anyLong());
 
+    userService.createUser(createUser);
     Optional<UserDto> result = userService.deleteUser(1L);
 
     assertTrue(result.isPresent());
-    assertEquals(user.getId(), result.get().getId());
-    assertEquals(user.getFirstName(), result.get().getFirstName());
-    assertEquals(user.getLastName(), result.get().getLastName());
+    assertEquals(modelMapper.map(user, UserDto.class), result.get());
     verify(userRepository, times(1)).deleteById(1L);
     verify(cache, times(1)).remove(1L);
   }
 
   @Test
-  void testBuyShare() {
-    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-    when(shareRepository.findById(1L)).thenReturn(Optional.of(share));
-
-    Optional<ShareDto> result = userService.buyShare(1L, 1L);
-
-    assertTrue(result.isPresent());
-  }
-
-  @Test
-  void testGetShares() {
-    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-
-    Optional<List<ShareDto>> result = userService.getShares(1L);
-
-    assertTrue(result.isPresent());
-    assertEquals(3, result.get().size());
-    assertEquals(share.getId(), result.get().get(1).getId());
-    assertEquals(share.getSymbol(), result.get().get(1).getSymbol());
-  }
-
-  @Test
   void testSellShare() {
-    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-    when(shareRepository.findById(1L)).thenReturn(Optional.of(share));
+    when(cache.get(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.save(any(User.class))).thenReturn(user);
+    when(shareRepository.findById(1L)).thenReturn(Optional.ofNullable(share));
+
+    user.addShare(share);
+    shareRepository.save(share);
+    userService.createUser(createUser);
 
     Optional<ShareDto> result = userService.sellShare(1L, 1L);
 
     assertTrue(result.isPresent());
+    assertEquals(modelMapper.map(share, ShareDto.class), result.get());
+    verify(userRepository, times(2)).save(any(User.class));
   }
 
-//  @Test
-//  void testGetUsersSharesAndCompany() {
-//    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-//    when(shareRepository.findById(1L)).thenReturn(Optional.of(share));
-//
-//    Optional<List<UserShareDto>> result = userService.getUsersSharesAndCompanies();
-//
-//    assertTrue(result.isPresent());
-//    assertEquals(3, result.get().size());
-//    assertEquals(user.getId(), result.get().get(1).getId());
-//    assertEquals(user.getFirstName(), result.get().get(1).getFirstName());
-//    assertEquals(user.getLastName(), result.get().get(1).getLastName());
-//    verify(userRepository, times(3)).save(any(User.class));
-//  }
-//
-//  @Test
-//  void testGetUsersByCompanyAndSharePriceRange() {
-//    when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-//    when(shareRepository.findById(1L)).thenReturn(Optional.of(share));
-//
-//    Optional<List<UserShareDto>> result =
-//        userService.getUsersByCompanyAndSharePriceRange(1L, 1.0f, 1.0f);
-//
-//    assertTrue(result.isPresent());
-//    assertEquals(3, result.get().size());
-//    assertEquals(user.getId(), result.get().get(1).getId());
-//    assertEquals(user.getFirstName(), result.get().get(1).getFirstName());
-//    assertEquals(user.getLastName(), result.get().get(1).getLastName());
-//    verify(userRepository, times(3)).save(any(User.class));
-//  }
+  @Test
+  void testBuyShare() {
+    when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
+    when(userRepository.save(any(User.class))).thenReturn(user);
+    when(shareRepository.findById(1L)).thenReturn(Optional.ofNullable(share));
+
+    user.addShare(share);
+    shareRepository.save(share);
+    userService.createUser(createUser);
+    Optional<ShareDto> result = userService.buyShare(1L, 1L);
+
+    assertTrue(result.isPresent());
+    assertEquals(modelMapper.map(share, ShareDto.class), result.get());
+    verify(userRepository, times(2)).save(any(User.class));
+  }
+
+  @Test
+  void testGetShares() {
+    when(userRepository.save(any(User.class))).thenReturn(user);
+    when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
+
+    user.addShare(share);
+    shareRepository.save(share);
+    userService.createUser(createUser);
+
+    Optional<List<ShareDto>> result = userService.getShares(1L);
+
+    assertTrue(result.isPresent());
+    assertEquals(Collections.singletonList(modelMapper.map(share, ShareDto.class)), result.get());
+    verify(userRepository, times(1)).save(any(User.class));
+  }
+
+  @Test
+  void testGetUsersSharesAndCompanies() {
+    when(userRepository.findAll()).thenReturn(List.of(user));
+    when(userRepository.save(any(User.class))).thenReturn(user);
+
+    user.addShare(share);
+    shareRepository.save(share);
+    userService.createUser(createUser);
+
+    Optional<List<UserShareDto>> result = userService.getUsersSharesAndCompanies();
+
+    assertTrue(result.isPresent());
+    assertEquals(Collections.singletonList(modelMapper.map(user, UserShareDto.class)),
+        result.get());
+    verify(userRepository, times(1)).save(any(User.class));
+  }
+
+  @Test
+  void testGetUsersByCompanyAndSharePriceRange() {
+    when(userRepository.findUsersByCompanyAndSharePriceRange(anyLong(), anyFloat(), anyFloat())).thenReturn(List.of(user));
+    when(userRepository.save(any(User.class))).thenReturn(user);
+
+    Company company = new Company(1L, "Company Name", 1D, "Adress", "Website", new HashSet<>());
+    company.addShare(share);
+    companyRepository.save(company);
+    user.addShare(share);
+    shareRepository.save(share);
+    userService.createUser(createUser);
+
+    Optional<List<UserShareDto>> result =
+        userService.getUsersByCompanyAndSharePriceRange(1L, 1.0f, 1.0f);
+
+    assertTrue(result.isPresent());
+    assertEquals(Collections.singletonList(modelMapper.map(user, UserShareDto.class)),
+        result.get());
+    verify(userRepository, times(1)).save(any(User.class));
+  }
 }
